--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="flex flex-col lg:flex-row items-center gap-5 mt-2 w-full justify-center">
                         
                         <!-- CTA Principal -->
-                        <a href="#" class="relative w-72 shrink-0 block transition-transform hover:scale-105 active:scale-95 group">
+                        <a href="https://play.google.com/store/apps/details?id=com.jessicaRios.Trilha_da_raposa&pcampaignid=web_share" target="_blank" class="relative w-72 shrink-0 block transition-transform hover:scale-105 active:scale-95 group">
                             <img src="assets/images/Large_button.png" alt="Botão Google Play" class="w-full filter drop-shadow-lg group-hover:brightness-110">
                             <div class="absolute inset-0 flex items-center justify-center gap-3 p-3">
                                 <!-- Icone Google Play -->
@@ -375,7 +375,7 @@
 
                 <div class="flex flex-col md:flex-row justify-center items-center gap-6 mb-12">
                     <!-- Botão Google Play (Large Style) -->
-                    <a href="#" class="relative w-72 shrink-0 block transition-transform hover:scale-105 active:scale-95 group">
+                    <a href="https://play.google.com/store/apps/details?id=com.jessicaRios.Trilha_da_raposa&pcampaignid=web_share" target="_blank" class="relative w-72 shrink-0 block transition-transform hover:scale-105 active:scale-95 group">
                         <img src="assets/images/Large_button.png" alt="Botão Google Play" class="w-full filter drop-shadow-lg group-hover:brightness-110">
                         <div class="absolute inset-0 flex items-center justify-center gap-3 p-3">
                             <!-- Icone Google Play -->
